// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to custom button text 1`] = `
<div class="mi-signature__footer">
  <button
    type="button"
    class="mi-button mi-button--default mi-button--small"
  >
    <div class="mi-button__content">
      <span class="mi-button__text">
        Bar
      </span>
    </div>
  </button>
  <button
    type="button"
    class="mi-button mi-button--primary mi-button--small"
  >
    <div class="mi-button__content">
      <span class="mi-button__text">
        Foo
      </span>
    </div>
  </button>
</div>
`;

exports[`should render tips correctly 1`] = `
<div class="mi-signature">
  <div class="mi-signature__content">
    <p>
      Canvas is not supported
    </p>
  </div>
  <div class="mi-signature__footer">
    <button
      type="button"
      class="mi-button mi-button--default mi-button--small"
    >
      <div class="mi-button__content">
        <span class="mi-button__text">
          Clear
        </span>
      </div>
    </button>
    <button
      type="button"
      class="mi-button mi-button--primary mi-button--small"
    >
      <div class="mi-button__content">
        <span class="mi-button__text">
          Confirm
        </span>
      </div>
    </button>
  </div>
</div>
`;
